test/expected/perr_unterminated_array_assignment.out
shit: 2:5: error: Unterminated array assignment, expected ')'.
     2 |  arr=(a b
       |      ^~ here.
